--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-hover-video-player": "^10.0.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
